[project]
name = "web-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "browser-use>=0.1.35",
    "google-auth>=2.38.0",
    "google-cloud-bigquery>=3.29.0",
    "google-generativeai>=0.8.4",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "langchain-google-genai>=2.0.8",
    "pandas>=2.2.3",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.42.0",
    "streamlit-feedback>=0.1.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
